# zx

./: .gitmodules  demo.py  ros接口文档.docx  ros接口文档python版本说明.md  ros接口文档说明.md  run.sh  test.cpp
Ti5_py/: 1  CMakeLists.txt  package.xml  setup.py
Ti5_py/src/: 1  Ti5_py.py  __init__.py
Ti5robot/: CMakeLists.txt  package.xml
Ti5robot/include/: Ti5robot.h  tcontrolcan.h
Ti5robot/include/Ti5robot/: Ti5robot.h  zhcxcaninterface.h
Ti5robot/src/: .Ti5robot.cpp.swi  .Ti5robot.cpp.swj  .Ti5robot.cpp.swk  .Ti5robot.cpp.swl  .Ti5robot.cpp.swm  .Ti5robot.cpp.swn  .Ti5robot.cpp.swo  .Ti5robot.cpp.swp  Ti5robot.cpp  ！
cpp_demo/: CMakeLists.txt  package.xml
cpp_demo/src/: .cpp_demo.cpp.swo  .cpp_demo.cpp.swp  1  cpp_demo.cpp
demo/: CMakeLists.txt  package.xml
demo/src/: demo.cpp
py_demo/: CMakeLists.txt  package.xml
py_demo/src/: .py_demo.py.swp  1  py_demo.py
serial_demo/: .CMakeLists.txt.swp  CMakeLists.txt  package.xml
serial_demo/include/: .controlcan.h.swp  communication.h  communication_new.h  draw.h  encode.h  mathfunc.h  obstacle_avoidance.h  pos_trans.h  robotmove.h  serial.h  tcontrolcanbase.h  tcontrolcanfactor.h  tool.h  uart_frame_communication_protocol.h
serial_demo/include/serial_demo/: actuator_control_interface.h  serial.h
serial_demo/src/: .serial_auto.cpp.swp  .serial_demo.cpp.swm  .serial_demo.cpp.swn  .serial_demo.cpp.swo  .serial_demo.cpp.swp  .serial_demo_slow_start.cpp.swp  actuator_control_interface.cpp  serial_auto.cpp  serial_demo.cpp  serial_demo.cpp~  serial_demo_0608.cpp  serial_demo_0613.cpp  serial_demo_0613_COMP.cpp  serial_demo_1kg.cpp  serial_demo_20230616.cpp  serial_demo_20231030.cpp  serial_demo_20231107IMPIMPIMPIMPIMP.cpp  serial_demo_20231107_END_IMP.cpp  serial_demo_20231107_IMPIMP.cpp  serial_demo_20231107_S_LINE_END_GOOD.cpp  serial_demo_3axis.cpp  serial_demo_3kg_oldurdf.cpp  serial_demo_6.cpp  serial_demo_90percent.cpp  serial_demo_BAK_IMP_1103.cpp  serial_demo_BAK_IMP_20231102.cpp  serial_demo_BAK_IMP_20231105.cpp  serial_demo_CAN_6axis_end.cpp  serial_demo_CAN_7axis_torque_end.cpp  serial_demo_CAN_step_1_20230614.cpp  serial_demo_ik_0615_BAK_shake.cpp  serial_demo_slow_start.cpp  serial_demo_toque.cpp  ss.cpp  uart_frame_communication_protocol.cpp
test1/: CMakeLists.txt  package.xml
test1/include/: SingleCaninterface.h
test1/src/: SingleCaninterface.cpp  test1.cpp
